# identity-crates

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/aadhaar-offline-kyc/: Cargo.toml  README.md
crates/aadhaar-offline-kyc/certs/: uidai_prod.pem
crates/aadhaar-offline-kyc/src/: data.rs  error.rs  lib.rs  offline_ekyc.rs  parser.rs  qr.rs  verhoeff.rs
crates/aamva/: Cargo.toml  README.md
crates/aamva/src/: data.rs  error.rs  lib.rs  parser.rs  pdf417.rs
crates/dmrtd/: Cargo.toml  README.md
crates/dmrtd/src/: passport.rs
crates/dmrtd/src/com/: mod.rs
crates/dmrtd/src/crypto/: aa_pubkey.rs  aes.rs  crypto_utils.rs  des.rs  diffie_hellman.rs  iso9797.rs
crates/dmrtd/src/extension/: int.rs  string.rs  uint8list.rs
crates/dmrtd/src/lds/: asn1_object_identifiers.rs  efcard_access.rs  efcard_security.rs  mrz.rs  tlv.rs  tlv_set.rs
crates/dmrtd/src/lds/df1/: df1.rs  dg.rs  efcom.rs  efdg1.rs  efdg10.rs  efdg11.rs  efdg12.rs  efdg14.rs  efdg15.rs  efdg16.rs  efdg2.rs  efdg4.rs  efdg5.rs  efdg6.rs  efdg7.rs  efdg8.rs  efdg9.rs  efsod.rs  mod.rs
crates/dmrtd/src/lds/substruct/: pace_info.rs
crates/dmrtd/src/proto/: access_key.rs  aes_smcipher.rs  bac.rs  bac_session.rs  can_key.rs  dba_key.rs  des_smcipher.rs  dh_pace.rs  domain_parameter.rs  ecdh_pace.rs  mod.rs  mrtd_api.rs  mrtd_sm.rs  pace.rs  pace_session.rs  public_key_pace.rs
crates/dmrtd/src/proto/iso7816/: command_apdu.rs  iso7816.rs  mod.rs
crates/dmrtd/src/types/: data.rs  mod.rs
crates/incometax-pan-qr/: Cargo.toml  README.md
crates/incometax-pan-qr/src/: enums.rs  error.rs  image_processor.rs  inflater.rs  lib.rs  parser.rs  qr.rs  structs.rs  unpacker.rs  values.rs  verifier.rs
crates/incometax-pan-qr/tests/: e2e_sample.rs
crates/mrz-parser/: Cargo.toml  README.md
crates/mrz-parser/src/: checkdigit_calculator.rs  country_patterns.rs  exceptions.rs  field_parser.rs  field_recognition_defects_fixer.rs  lib.rs  parser.rs  result.rs  sex.rs  string_extensions.rs  td1_format_mrz_parser.rs  td2_format_mrz_parser.rs  td3_format_mrz_parser.rs
src/: lib.rs  passport.rs  utils.rs
src/crypto/: aa_pubkey.rs  aes.rs  crypto_utils.rs  des.rs  diffie_hellman.rs  iso9797.rs  kdf.rs  mod.rs
src/extension/: datetime.rs  logging.rs  mod.rs  string.rs  uint8list.rs
src/lds/: asn1_object_identifiers.rs  ef.rs  efcard_access.rs  efcard_security.rs  mod.rs  mrz.rs  tlv.rs  tlv_set.rs
src/lds/df1/: dg.rs  efcom.rs  efdg1.rs  efdg11.rs  efdg13.rs  efdg15.rs  efdg2.rs  efdg3.rs  efsod.rs
src/lds/substruct/: mod.rs  pace_cons.rs  pace_info.rs
src/proto/: aes_smcipher.rs  bac.rs  bac_session.rs  can_key.rs  dba_key.rs  des_smcipher.rs  dh_pace.rs  domain_parameter.rs  ecdh_pace.rs  mod.rs  mrtd_api.rs  mrtd_sm.rs  pace.rs  pace_session.rs  public_key_pace.rs  ssc.rs
src/proto/iso7816/: command_apdu.rs  response_apdu.rs  sm.rs  smcipher.rs
src/types/: data.rs  exception.rs  pair.rs
