# Cargo workspace root.
#
# Member crates live under `crates/`. `dmrtd` is the eMRTD / ICAO 9303 reader
# core; additional crates (e.g. transports, CLI, FFI bindings) can be added as
# new directories under `crates/` and they are picked up automatically.
[workspace]
resolver = "2"
members = ["crates/*"]
