# Cargo workspace root.
#
# Member crates live under `crates/`. `dmrtd` is the eMRTD / ICAO 9303 reader
# core; additional crates (e.g. transports, CLI, FFI bindings) can be added as
# new directories under `crates/` and they are picked up automatically.
#
# Shared package metadata and dependency versions are defined here and inherited
# by member crates via `.workspace = true`, so versions stay consistent.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Balamurali Pandranki <balamurali@live.com>"]
edition = "2021"
# 1.92 is required by the `xml-sec` dependency (Aadhaar XML-DSig verification);
# the other crates would build on 1.85, but the workspace floor is the max.
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wearekesk/identity-crates"
homepage = "https://github.com/wearekesk/identity-crates"

[workspace.dependencies]
# encoding / ASN.1 / time
asn1 = "0.24.1"
base64 = "0.22"
hex = "0.4"
chrono = "0.4.44"
once_cell = "1.21.4"
log = "0.4"
thiserror = "2"

# parsing / text / enums (mrz-parser, aamva, aadhaar-offline-kyc)
regex = "1.12.3"
strum = { version = "0.26", features = ["derive"] }
roxmltree = "0.20"

# barcode + image decoding (aamva, aadhaar-offline-kyc)
rxing = { version = "0.8", features = ["image"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }

# compression / archives (aadhaar-offline-kyc)
flate2 = "1"
zip = "8"

# X.509 / XML-DSig (aadhaar-offline-kyc). NOTE: the xml-sec dependency and its
# XML-DSig trust-boundary approach are intentionally left as-is.
x509-parser = "0.18"
xml-sec = "0.1.7"

# RustCrypto: block ciphers + MAC + hashes + traits
aes = "0.9"
des = "0.9"
cmac = "0.8"
sha1 = "0.11"
sha2 = "0.11"
digest = "0.11"
cipher = "0.5"
cbc = { version = "0.2", features = ["alloc"] }
subtle = "2"
zeroize = { version = "1.9", features = ["zeroize_derive"] }

# big integers + elliptic curves (PACE ECDH-GM, P-256)
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.10"
p256 = { version = "=0.14.0-rc.14", features = ["arithmetic", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = { version = "0.14", features = ["arithmetic"] }
