[package]
name = "aadhaar-offline-kyc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Aadhaar offline e-KYC (India UIDAI): Secure QR v2 + Paperless Offline e-KYC (ZIP/XML) with UIDAI signature verification."
readme = "README.md"


[lib]
name = "aadhaar"

[dependencies]
chrono.workspace = true
flate2.workspace = true
num-bigint.workspace = true
rxing.workspace = true
strum.workspace = true
thiserror.workspace = true
image.workspace = true
# Paperless Offline e-KYC: share-phrase ZIP, XML parse, UIDAI RSA signature verify
zip.workspace = true
roxmltree.workspace = true
base64.workspace = true
# sha2 stays pinned to 0.10 here (the workspace pin is 0.11 for `dmrtd`); the two
# majors are not feature-unifiable, so this dep is intentionally left per-crate.
sha2 = "0.10"          # mobile/email hash
x509-parser.workspace = true
xml-sec.workspace = true
