[package]
name = "aamva"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AAMVA DL/ID — PDF417 barcode scan + payload parser (US / Canadian driver's licenses)."

[dependencies]
chrono.workspace = true
rxing.workspace = true
strum.workspace = true
thiserror.workspace = true
image.workspace = true
