[package]
name = "incometax-pan-qr"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Indian Income-Tax PAN (Permanent Account Number) structural validation + entity-type classification."

[dependencies]
base64.workspace = true
flate2.workspace = true
image.workspace = true
log.workspace = true
p384.workspace = true
rxing.workspace = true
thiserror.workspace = true
