[package]
name = "mrz-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ICAO 9303 Machine Readable Zone (TD1 / TD2 / TD3) text parser — fields + check digits."

[dependencies]
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
strum.workspace = true
